Alignment back to normal + fetch posts fixed

--- a/src/styles/_globals.css
+++ b/src/styles/_globals.css
@@ -1,5 +1,5 @@
 :root {
-  --max-width: 70rem; /* 1200px */
+  --max-width: 81rem; /* 1200px */
 
   --font-poppins: 'Poppins', Verdana, Geneva, Tahoma, sans-serif;
 
